# server

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  compose.yaml  docker-compose.yml  mod.json  openapi.yml  setup.sh  spec.yml
.devcontainer/: devcontainer.json
.sqlx/: query-01959e9a4fdc1c6b0d9dbeff80c79a58e0bae2d79af6c2b9e53ead7d9b6e214d.json  query-01bd480b1054bbc29c7d142eedfb05e2b3237b16153d5d00cef5c2a7ba7285b4.json  query-029f912ebf303c28443b81c0272c76da716781e22a20fead1147fa3ef43ed932.json  query-0333e917f75fd481ec494abb6e2853cb699faca7c34507e314ae5225b592ed87.json  query-0411ef36ab03892ea4fcf4bb8e7ac1a75139bf9937a76d542e0fc3361fe156d1.json  query-042004a9e2339b1bd089b753c817d60445a38d6f10477a974d18775ec04f2fd5.json  query-0519d0d7c6d97ffbff763ba2d1c85b2bc796c64f42f15f078a5639f717aa21b9.json  query-0544b9d43a2a66c8e07f1c903de425e0b95136a66f094ae38f7a700bdd924820.json  query-0545c14cacbef3d49efc7d593b9307f05a3634cd1432f492a38c5f82d38196b2.json  query-073fa455f6071709fcf51f8c8e4a5bced00a3cacd10dc4637e7df2acc2c7ddb4.json  query-075ae7dc65d343536041d88618588d5e657b320b3798d35b6d3aaf87559343b7.json  query-077307d1732e58c3fcf907816e4ae872d766925bdf85f87a0c26acea02e7b239.json  query-08d95a8c03eb7561a59d21554abfc578f6b28b7713207b17310ba98ce8fb4004.json  query-0965f8bc73b6d9b46df0f47dad338cd5dcf17d5ca5427349273029c1d1c47a23.json  query-0a18d6fc5b51dc801d8e674590b2d609e107196eca233278f827f11c242b6e38.json  query-0a82d7353541cf5f6f2275fc89324ca7b1b724bf76e85da46c646b071103a0ba.json  query-0b346ab38cc69f92b003d24a74b2da108e608d2ee2bf2b490ad62ec53c07cb51.json  query-0b61bfa9c9e33c3b9084cac40e3f9ec3faeb6a21cff9c43fde8cda19f382ce5f.json  query-0bce2dfefe17b75e583a50e28fde3ea562f7e4e60c09f6483ab6e026513906c9.json  query-0bfcfe6504bf090dc126a2f4a4a63f0241486ff99158cf66b0af7e917117d69b.json  query-0e95ef8707ac61465d5567b516ac7b84401b72d97d904b05d5b59ad000e4efeb.json  query-0eed3c807b61381f067354bf1f573587610f5e01e75b3d205401623af7a94d65.json  query-1196f230c31488941d2c89c9e2250dbd5c872220058f067fe889ead45df5aea7.json  query-120ac6102a436b096d442dc5e9c0af4628f2b5803a59b2c28c6052250d60bef9.json  query-12d29fa3087ef95a089e5bc806c98776e26770bd312ed0a2202f2aab31eb2daa.json  query-1303aee56285c1870f8808999c22525567231dc56cb1663c4e41aec26ffa6799.json  query-14cd22475a4bd7b386ff6dd4cd9b5b06ee30907186a19db1b48bc904de6b769c.json  query-159785d4a225f320a514c42f4f5c6140e25272a5c6838135a5ebbd306da5d471.json  query-16469aa4a91fd0c6e55b56b3ae1bdbcd907942f510fe3f16683abd6f0429c86a.json  query-167e8da5ace0da8e91523ccc0083f37194c5dd030a0b56401138770495ea5725.json  query-17eda7d205664b0b48a50a9457658d0869c2ba8a8e80a9b6b3268572277b137c.json  query-181036cd0f64802504fe5025f18b076dc43adb58d626d76818d73fc3a762ba91.json  query-1a1af21f16a81035c7acd283daa351091e2a4e6b822fdadb377b25bdd7fd4d4f.json  query-1dab289f4e73713483b43887079957a6e93fc67e2ff5295a892f8968fba3f085.json  query-1ed87bd1d14f9c1febbb2a2a2d11eb3d413d28283d97c0b9bfca6f4ca3c80256.json  query-1ee95124185a80b20fffcc2ca64084ef1440d4a166a1296bedf9529395272486.json  query-1f28723342071b69663f3773708d95fd35b9f3883f948ae5de81cc3d26b6b813.json  (+293 more)
config/: log4rs.example.yaml
db/: setup.sql
(+215 files in other folders)
