[package]
name = "geode-index"
version = "0.35.4"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["png"] }
actix-web = "4.6"
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
    "ipnetwork",
] }
tokio = { version = "1.38", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
zip = "2.2"
sha256 = "1.5"
semver = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
chrono = "0.4"
actix-cors = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
log4rs = { version = "1.3.0", features = ["console_appender", "rolling_file_appender", "fixed_window_roller", "time_trigger", "default", "threshold_filter"] }
